tests/int/list_command/snapshots/integration__int__list_command__flags__depth_1.snap
---
source: tests/int/list_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
[lib]             advanced_globs
[lib]             baz
[lib]             crate_root_reexport
[lib]             custom_path
[lib]             dir_module
[lib]             empty_module
[lib]             file_module
[lib]             foo
[lib]             glob_patterns
[lib]             glob_showcase
[lib]             group_patterns
[lib]             inline_modules
[lib]             item_visibility
[lib]             lib
[lib]             mixed
[lib]             nesting
[lib]             no_pub_items
[lib]             reexports
[lib]             uses_empty_glob
[lib]             visibility
[bin:modules]     main
[bin:modules-cli] app
[bin:modules-cli] app_only

----- stderr -----
