tests/int/list_command/snapshots/integration__int__list_command__flags__should_list_root_with_depth.snap
---
source: tests/int/list_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - lib
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
advanced_globs
baz
crate_root_reexport
custom_path
dir_module
empty_module
file_module
foo
glob_patterns
glob_showcase
group_patterns
inline_modules
item_visibility
lib
mixed
nesting
no_pub_items
reexports
uses_empty_glob
visibility

----- stderr -----
