tests/int/list_command/snapshots/integration__int__list_command__flags__should_list_root_with_visibility.snap
---
source: tests/int/list_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - lib
    - "-V"
---
success: true
exit_code: 0
----- stdout -----
advanced_globs                          pub
advanced_globs::aliased_module          pub
advanced_globs::enum_variants           pub
advanced_globs::internal                
advanced_globs::layer1                  pub
advanced_globs::layer1::layer2          pub
advanced_globs::layer1::layer2::layer3  pub
advanced_globs::macro_module            pub
advanced_globs::original                pub
advanced_globs::prelude                 pub
advanced_globs::shadowing               pub
advanced_globs::trait_providers         pub
advanced_globs::unix_specific           pub
advanced_globs::windows_specific        pub
baz                                     pub
custom_path                             pub
dir_module                              pub
dir_module::child_dir                   pub
dir_module::child_file                  pub
empty_module                            pub
file_module                             pub
foo                                     pub
foo::bar                                pub
foo::other                              pub
glob_patterns                           pub
glob_patterns::constants                pub
glob_patterns::mixed_exports            pub
glob_patterns::outer                    pub
glob_patterns::outer::inner             pub
glob_patterns::self_ref                 pub
glob_patterns::set_a                    pub
glob_patterns::set_b                    pub
glob_patterns::traits                   pub
glob_patterns::types                    pub
glob_patterns::utilities                pub
glob_showcase                           pub
glob_showcase::api                      pub
glob_showcase::config                   pub
glob_showcase::config::all              pub
glob_showcase::config::client           pub
glob_showcase::config::logging          pub
glob_showcase::config::server           pub
glob_showcase::database                 pub
glob_showcase::database::connection     pub
glob_showcase::database::query          pub
glob_showcase::database::transaction    pub
glob_showcase::errors                   pub
glob_showcase::models                   pub
glob_showcase::prelude                  pub
glob_showcase::traits                   pub
glob_showcase::utils                    pub
glob_showcase::utils::collection        pub
glob_showcase::utils::math              pub
glob_showcase::utils::string            pub
group_patterns                          pub
inline_modules                          pub
inline_modules::inner                   pub
inline_modules::nested                  pub
inline_modules::nested::deep            pub
inline_modules::outer                   pub
inline_modules::outer::file_child       pub
inline_modules::private_inline          
item_visibility                         pub
lib                                     pub
mixed                                   pub
mixed::file_child                       pub
mixed::inline_child                     pub
nesting                                 pub
nesting::level1                         pub
nesting::level1::level2                 pub
nesting::level1::level2::level3         pub
no_pub_items                            pub
reexports                               pub
reexports::internal                     
reexports::types                        
uses_empty_glob                         pub
visibility                              pub
visibility::inner                       pub(crate)
visibility::private_mod                 
visibility::pub_crate_mod               pub(crate)
visibility::pub_mod                     pub
visibility::pub_super_mod               pub(super)
visibility::restricted_mod              pub(in crate::visibility)

----- stderr -----
