tests/int/list_command/snapshots/integration__int__list_command__flags__should_list_subtree_with_depth.snap
---
source: tests/int/list_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - glob_showcase
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
glob_showcase
glob_showcase::api
glob_showcase::config
glob_showcase::database
glob_showcase::errors
glob_showcase::models
glob_showcase::prelude
glob_showcase::traits
glob_showcase::utils

----- stderr -----
