tests/int/list_command/snapshots/integration__int__list_command__flags__should_list_subtree_with_visibility.snap
---
source: tests/int/list_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - list
    - visibility
    - "-V"
---
success: true
exit_code: 0
----- stdout -----
visibility                  pub
visibility::inner           pub(crate)
visibility::private_mod     
visibility::pub_crate_mod   pub(crate)
visibility::pub_mod         pub
visibility::pub_super_mod   pub(super)
visibility::restricted_mod  pub(in crate::visibility)

----- stderr -----
