tests/int/list_command/snapshots/integration__int__list_command__flags__should_list_with_include_tests.snap
---
source: tests/int/list_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
[lib]              advanced_globs
[lib]              advanced_globs::aliased_module
[lib]              advanced_globs::enum_variants
[lib]              advanced_globs::internal
[lib]              advanced_globs::layer1
[lib]              advanced_globs::layer1::layer2
[lib]              advanced_globs::layer1::layer2::layer3
[lib]              advanced_globs::macro_module
[lib]              advanced_globs::original
[lib]              advanced_globs::prelude
[lib]              advanced_globs::shadowing
[lib]              advanced_globs::trait_providers
[lib]              advanced_globs::unix_specific
[lib]              advanced_globs::windows_specific
[lib]              baz
[lib]              custom_path
[lib]              dir_module
[lib]              dir_module::child_dir
[lib]              dir_module::child_file
[lib]              empty_module
[lib]              file_module
[lib]              foo
[lib]              foo::bar
[lib]              foo::other
[lib]              glob_patterns
[lib]              glob_patterns::constants
[lib]              glob_patterns::mixed_exports
[lib]              glob_patterns::outer
[lib]              glob_patterns::outer::inner
[lib]              glob_patterns::self_ref
[lib]              glob_patterns::set_a
[lib]              glob_patterns::set_b
[lib]              glob_patterns::traits
[lib]              glob_patterns::types
[lib]              glob_patterns::utilities
[lib]              glob_showcase
[lib]              glob_showcase::api
[lib]              glob_showcase::config
[lib]              glob_showcase::config::all
[lib]              glob_showcase::config::client
[lib]              glob_showcase::config::logging
[lib]              glob_showcase::config::server
[lib]              glob_showcase::database
[lib]              glob_showcase::database::connection
[lib]              glob_showcase::database::query
[lib]              glob_showcase::database::transaction
[lib]              glob_showcase::errors
[lib]              glob_showcase::models
[lib]              glob_showcase::prelude
[lib]              glob_showcase::traits
[lib]              glob_showcase::utils
[lib]              glob_showcase::utils::collection
[lib]              glob_showcase::utils::math
[lib]              glob_showcase::utils::string
[lib]              group_patterns
[lib]              inline_modules
[lib]              inline_modules::inner
[lib]              inline_modules::nested
[lib]              inline_modules::nested::deep
[lib]              inline_modules::outer
[lib]              inline_modules::outer::file_child
[lib]              inline_modules::private_inline
[lib]              item_visibility
[lib]              lib
[lib]              mixed
[lib]              mixed::file_child
[lib]              mixed::inline_child
[lib]              nesting
[lib]              nesting::level1
[lib]              nesting::level1::level2
[lib]              nesting::level1::level2::level3
[lib]              no_pub_items
[lib]              reexports
[lib]              reexports::internal
[lib]              reexports::types
[lib]              tests
[lib]              uses_empty_glob
[lib]              visibility
[lib]              visibility::inner
[lib]              visibility::private_mod
[lib]              visibility::pub_crate_mod
[lib]              visibility::pub_mod
[lib]              visibility::pub_super_mod
[lib]              visibility::restricted_mod
[bin:modules]      main
[bin:modules-cli]  app
[test:helpers]     helpers
[test:integration] helpers
[test:integration] integration

----- stderr -----
